Job refac8 (#1420)
* WIP
- new dynamodb Index
- replace all EMR script params in case of reused Steps
- support baseInputDir in RunEmrJob
- add resourceHint output in exports

Signed-off-by: Maximilian Chrzan <maximilian.chrzan@here.com>
Signed-off-by: mchrza <maximilian.chrzan@here.com>

* - Introduce new declarations for inputSets & outputSets on all steps
- Refactor reusability implementation / writing a new GraphFusionTool

Signed-off-by: Benjamin Rögner <benjamin.roegner@here.com>

* Fix assignments of outputSet fields in step implementations

Signed-off-by: Benjamin Rögner <benjamin.roegner@here.com>

* Prevent imports into inactive spaces

Signed-off-by: Benjamin Rögner <benjamin.roegner@here.com>

* Complete implementation of GraphFusionTool

Signed-off-by: Benjamin Rögner <benjamin.roegner@here.com>

* Add further unit tests for GraphFusionTool

Signed-off-by: Benjamin Rögner <benjamin.roegner@here.com>

* Minor fixes after rebasing

Signed-off-by: Benjamin Rögner <benjamin.roegner@here.com>

* Serialize DelegateStep#delegate internally & in db

Signed-off-by: Benjamin Rögner <benjamin.roegner@here.com>

* - Implement support for some edge-cases in GraphFusionTool
- Adjust JobExecutor to use new GraphFusionTool

Signed-off-by: Benjamin Rögner <benjamin.roegner@here.com>

* Add public setter for outputSets of step "RunEmrJob" to allow compilers to set the expected output paths of the EMR job from outside

Signed-off-by: Benjamin Rögner <benjamin.roegner@here.com>

* Adjust GraphTransformer to work with new DelegateSteps

Signed-off-by: Benjamin Rögner <benjamin.roegner@here.com>

* Implement script param replacement for input-set references

Signed-off-by: Benjamin Rögner <benjamin.roegner@here.com>

* Remove obsolete field RunEmrJob#inputsExpected

Signed-off-by: Benjamin Rögner <benjamin.roegner@here.com>

* Use names of InputSets as their reference identifier in EMR params

Signed-off-by: Benjam