@@ -19,7 +19,8 @@
 
 package com.here.xyz.jobs.steps;
 
-import static com.here.xyz.jobs.steps.outputs.Output.MODEL_BASED_PREFIX;
+import static com.here.xyz.jobs.steps.Step.InputSet.USER_INPUTS;
+import static com.here.xyz.jobs.steps.Step.Visibility.USER;
 import static com.here.xyz.jobs.steps.resources.Load.addLoad;
 import static com.here.xyz.util.Random.randomAlpha;
 
@@ -33,10 +34,11 @@ import com.fasterxml.jackson.annotation.JsonView;
 import com.here.xyz.Typed;
 import com.here.xyz.jobs.JobClientInfo;
 import com.here.xyz.jobs.RuntimeInfo;
-import com.here.xyz.jobs.steps.execution.DelegateOutputsPseudoStep;
+import com.here.xyz.jobs.steps.execution.DelegateStep;
 import com.here.xyz.jobs.steps.execution.LambdaBasedStep;
 import com.here.xyz.jobs.steps.execution.RunEmrJob;
 import com.here.xyz.jobs.steps.inputs.Input;
+import com.here.xyz.jobs.steps.inputs.InputFromOutput;
 import com.here.xyz.jobs.steps.inputs.UploadUrl;
 import com.here.xyz.jobs.steps.outputs.DownloadUrl;
 import com.here.xyz.jobs.steps.outputs.ModelBasedOutput;
@@ -46,12 +48,18 @@ import com.here.xyz.jobs.steps.resources.Load;
 import com.here.xyz.jobs.util.S3Client;
 import com.here.xyz.util.service.BaseHttpServerVerticle.ValidationException;
 import java.io.IOException;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
+import java.util.NoSuchElementException;
+import java.util.Objects;
 import java.util.Set;
 import java.util.UUID;
+import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -60,7 +68,7 @@ import org.apache.logging.log4j.Logger;
 @JsonSubTypes({
     @JsonSubTypes.Type(value = LambdaBasedStep.class),
     @JsonSubTypes.Type(value = RunEmrJob.class),
-    @JsonSubTypes.Type(value = DelegateOutputsPseudoStep.class)
+    @JsonSubTypes.Type(value = DelegateStep.class)
 })
 @JsonIgnoreProperties(ignoreUnknown = true)
 @JsonInclude(Include.NON_DEFAULT)
@@ -83,11 +91,9 @@ public abstract class Step<T extends Step> implements Typed, StepExecution {
   @JsonView({Internal.class, Static.class})
   private boolean pipeline;
   @JsonView({Internal.class, Static.class})
-  private boolean useSystemInput;
+  protected List<OutputSet> outputSets = List.of();
   @JsonView({Internal.class, Static.class})
-  private boolean useSystemOutput;
-  @JsonView({Internal.class, Static.class})
-  private Set<String> inputStepIds;
+  private List<InputSet> inputSets = List.of();
   @JsonView({Internal.class, Static.class})
   private Map<String, String> outputMetadata;
 
@@ -139,10 +145,6 @@ public abstract class Step<T extends Step> implements Typed, StepExecution {
   @JsonIgnore
   public abstract int getEstimatedExecutionSeconds();
 
-  protected String bucketName() {
-    return Config.instance.JOBS_S3_BUCKET;
-  }
-
   protected String bucketRegion() {
     return Config.instance.AWS_REGION; //TODO: Get from bucket accordingly
   }
@@ -151,104 +153,170 @@ public abstract class Step<T extends Step> implements Typed, StepExecution {
     return jobId + "/" + getId();
   }
 
-  private Set<String> previousS3Prefixes() {
-    return getPreviousStepIds().stream().map(previousStepId -> jobId + "/" + previousStepId).collect(Collectors.toSet());
-  }
-
-  protected final String inputS3Prefix() {
-    return Input.inputS3Prefix(jobId);
-  }
-
-  protected final String outputS3Prefix(boolean userOutput, boolean onlyModelBased) {
-    return outputS3Prefix(stepS3Prefix(), userOutput, onlyModelBased);
-  }
-
-  protected final String outputS3Prefix(String stepS3Prefix, boolean userOutput, boolean onlyModelBased) {
-    return Output.stepOutputS3Prefix(stepS3Prefix, userOutput, onlyModelBased);
-  }
-
-  protected final Set<String> previousOutputS3Prefixes(boolean userOutput, boolean onlyModelBased) {
-    return previousS3Prefixes().stream().map(previousStepPrefix -> outputS3Prefix(previousStepPrefix, userOutput, onlyModelBased))
-        .collect(Collectors.toSet());
+  protected void registerOutputs(List<Output> outputs, String outputSetName) throws IOException {
+    registerOutputs(outputs, getOutputSet(outputSetName));
   }
 
   /**
    * Can be called (multiple times) by an implementing subclass to register a list of outputs which have been produced as an outcome of
-   * the step execution. The framework will care about storing the outputs and providing them to the step following this one.
-   * The following step will be able to access these outputs using the {@link #loadPreviousOutputs(boolean)} method.
+   * the step execution. The framework will care about storing the outputs and providing them to the later steps intending to consume
+   * these outputs.
+   * The following step will be able to access these outputs using the {@link #loadInputs(Class[])} method.
    *
    * In (potential) later executions of this step (e.g., in case of resume) this step can access outputs
-   * which have been formerly registered by using the method {@link #loadOutputs(boolean)}.
+   * which have been formerly registered by using the method {@link #loadOutputs(String)}.
    *
    * @param outputs The list of outputs to be registered for this step
-   * @param userOutput Whether the specified outputs should be visible to the user (or just to the system)
+   * @param outputSet The output set for which to register the outputs
    */
-  protected void registerOutputs(List<Output> outputs, boolean userOutput) throws IOException {
-    for (int i = 0; i < outputs.size(); i++)
-      outputs.get(i).store(outputS3Prefix(stepS3Prefix(), userOutput, outputs.get(i) instanceof ModelBasedOutput)
-          + "/" + UUID.randomUUID() + ".json"); //TODO: Use proper file suffix & content type
+  protected void registerOutputs(List<Output> outputs, OutputSet outputSet) throws IOException {
+    for (int i = 0; i < outputs.size(); i++) {
+      final Output output = outputs.get(i);
+      if (outputSet.modelBased && !(output instanceof ModelBasedOutput))
+        throw new IllegalArgumentException("Can not register output of type " + output.getClass().getSimpleName() + " as the output set "
+            + outputSet.name + " does not accept model based outputs.");
+      if (!outputSet.modelBased && output instanceof ModelBasedOutput)
+        throw new IllegalArgumentException("Can not register output of type " + output.getClass().getSimpleName() + " as the output set "
+            + outputSet.name + " does only accept model based outputs.");
+      output.store(toS3Path(outputSet) + "/" + UUID.randomUUID() + outputSet.fileSuffix);
+    }
   }
 
-  protected List<Output> loadPreviousOutputs(boolean userOutput) {
-    return loadPreviousOutputs(userOutput, Output.class);
+  public List<Output> loadUserOutputs() {
+    return loadOutputs(USER);
   }
 
-  protected List<Output> loadPreviousOutputs(boolean userOutput, Class<? extends Output> type) {
-    return loadOutputs(previousOutputS3Prefixes(userOutput, false));
+  public List<Output> loadOutputs(Visibility visibility) {
+    return outputSets.stream()
+        .filter(outputSet -> outputSet.visibility == visibility)
+        .flatMap(outputSet -> loadStepOutputs(outputSet).stream())
+        .toList();
   }
 
-  public List<Output> loadOutputs(boolean userOutput) {
-    return loadOutputs(Set.of(outputS3Prefix(userOutput, false)));
+  protected List<Output> loadOutputs(String outputSetName) {
+    return loadStepOutputs(getOutputSet(outputSetName));
   }
 
-  private List<Output> loadStepOutputs(Set<String> stepIds, boolean userOutput) {
-    Set<String> s3Prefixes = stepIds.stream()
-            .map(stepId -> {
-              //Inject jobId for reusability
-              String jId = jobId;
-              String sId = stepId;
-              if(stepId.indexOf(".") != -1){
-                jId = stepId.substring(0, stepId.indexOf("."));
-                sId = stepId.substring(stepId.indexOf(".") + 1);
-              }
-              return Output.stepOutputS3Prefix(jId, sId, userOutput, false);
-            })
-            .collect(Collectors.toSet());
-    return loadOutputs(s3Prefixes);
+  public OutputSet getOutputSet(String outputSetName) {
+    try {
+      return outputSets.stream().filter(set -> set.name.equals(outputSetName)).findFirst().get();
+    }
+    catch (NoSuchElementException e) {
+      throw new IllegalArgumentException("No outputSet was found with name: " + outputSetName);
+    }
   }
 
-  private List<Output> loadOutputs(Set<String> s3Prefixes) {
+  /**
+   * Loads the outputs that have been created by this step (so far).
+   * This method could be used in case of a {@link #resume()} is being performed e.g., to check a previous state of the progress.
+   * @param outputSet The outputSet for which to load the outputs
+   * @return The outputs that have been registered for the specified outputSet (so far).
+   */
+  private List<Output> loadStepOutputs(OutputSet outputSet) {
+    return loadOutputs(Set.of(toS3Path(outputSet)), outputSet.modelBased);
+  }
+
+  private List<Output> loadOutputs(Set<String> s3Prefixes, boolean modelBased) {
     return s3Prefixes
+        .stream()
+        //TODO: Scan the different folders in parallel
+        .flatMap(s3Prefix -> S3Client.getInstance().scanFolder(s3Prefix)
             .stream()
-            //TODO: Scan the different folders in parallel
-            .flatMap(s3Prefix -> S3Client.getInstance().scanFolder(s3Prefix)
-                    .stream()
-                    .filter(s3ObjectSummary -> s3ObjectSummary.getSize() > 0)
-                    .map(s3ObjectSummary -> s3ObjectSummary.getKey().contains(MODEL_BASED_PREFIX)
-                            ? ModelBasedOutput.load(s3ObjectSummary.getKey(), outputMetadata)
-                            : new DownloadUrl()
-                                  .withS3Key(s3ObjectSummary.getKey())
-                                  .withByteSize(s3ObjectSummary.getSize())
-                                  .withMetadata(outputMetadata)))
-            .collect(Collectors.toList());
-  }
-
-  protected List<S3DataFile> loadStepInputs() {
-    return useSystemInput
-        ? loadStepOutputs(getInputStepIds(), false).stream().map(output -> (S3DataFile) output).toList()
-        : loadInputs().stream().map(output -> (S3DataFile) output).toList();
+            .filter(s3ObjectSummary -> s3ObjectSummary.getSize() > 0)
+            .map(s3ObjectSummary -> modelBased
+                ? ModelBasedOutput.load(s3ObjectSummary.getKey(), outputMetadata)
+                : new DownloadUrl()
+                    .withS3Key(s3ObjectSummary.getKey())
+                    .withByteSize(s3ObjectSummary.getSize())
+                    .withMetadata(outputMetadata)))
+        .collect(Collectors.toList());
   }
 
   /**
    * NOTE: Calling this method may block the execution for some time, depending on the number of inputs to be listed.
    * That's the case because the metadata for each input has to be requested separately.
-   * @return
+   * TODO: Remove loading the native S3 metadata mentioned above
+   *
+   * Loads the inputs of this step.
+   * That could be inputs being provided by the user or outputs of prior steps.
+   * The result will only contain inputs that match (one of) the provided input type(s).
+   *
+   * @return All inputs for this step, filtered by the specified input type(s).
    */
-  protected List<Input> loadInputs() {
-    logger.info("[step:{}] Loading job inputs ...", getGlobalStepId());
-    if (inputs == null)
-      inputs = Input.loadInputs(getJobId());
-    return inputs;
+  protected List<Input> loadInputs(Class<? extends Input>... inputTypes) {
+    logger.info("[{}] Loading job inputs ...", getGlobalStepId());
+    if (inputs == null) {
+      inputs = new LinkedList<>();
+      for (InputSet inputSet : inputSets) {
+        //TODO: load the different inputSets in parallel
+        inputs.addAll(loadInputs(inputSet));
+      }
+    }
+    return filterInputs(inputs, inputTypes);
+  }
+
+  /**
+   * Loads the inputs for the specified {@link InputSet} of this step.
+   * That could be inputs being provided by the user or outputs of prior steps.
+   * The result will only contain inputs that match (one of) the provided input type(s).
+   *
+   * @return All inputs for the specified {@link InputSet} of this step, filtered by the specified input type(s).
+   */
+  protected List<Input> loadInputs(InputSet inputSet, Class<? extends Input>... inputTypes) {
+    return filterInputs(loadInputs(inputSet), inputTypes);
+  }
+
+  /**
+   * Loads the inputs of a previous step for the specified {@link InputSet}.
+   * This is an internal helper method that should never be called directly by any implementing subclass.
+   *
+   * @param inputSet
+   * @return All inputs from the specified InputSet
+   */
+  private List<Input> loadInputs(InputSet inputSet) {
+    if (inputSet.stepId == null && inputSet.name == null)
+      return Input.loadInputs(getJobId());
+    else if (inputSet.stepId == null)
+      throw new IllegalArgumentException("Incorrect input was provided: Missing source step ID");
+    else if (inputSet.name == null)
+      throw new IllegalArgumentException("Incorrect input was provided: Missing referenced output name");
+    else {
+      return loadOutputsFor(inputSet).stream().map(output -> transformToInput(output)).toList();
+    }
+  }
+
+  /**
+   * Loads the outputs of a previous step for the specified inputSet.
+   * This is an internal helper method that should never be called directly by any implementing subclass.
+   *
+   * @param inputSet The inputSet from which to load the inputs.
+   *  That inputSet can depict the user inputs or the outputs of a previous step in the same job or in another succeeded
+   *  job that ran earlier.
+   * @return All outputs for the specified InputSet
+   */
+  private List<Output> loadOutputsFor(InputSet inputSet) {
+    return loadOutputs(Set.of(inputSet.toS3Path(jobId)), inputSet.modelBased());
+  }
+
+  private static List<Input> filterInputs(List<Input> inputs, Class<? extends Input>[] inputTypes) {
+    if (inputTypes.length == 0)
+      return inputs;
+    return inputs.stream()
+        .filter(input -> Arrays.stream(inputTypes)
+            .anyMatch(inputType -> input.getClass().isAssignableFrom(inputType)))
+        .toList();
+  }
+
+  //TODO: Remove that workaround once the inputs & outputs were streamlined to one single inheritance chain
+  private static Input transformToInput(Output output) {
+    if (output instanceof S3DataFile s3File)
+      return new UploadUrl()
+          .withS3Bucket(s3File.getS3Bucket())
+          .withS3Key(s3File.getS3Key())
+          .withCompressed(s3File.isCompressed())
+          .withByteSize(s3File.getByteSize());
+    else
+      return new InputFromOutput().withDelegate(output);
   }
 
   protected int currentInputsCount(Class<? extends Input> inputType) {
@@ -377,7 +445,7 @@ public abstract class Step<T extends Step> implements Typed, StepExecution {
    */
   @Override
   public boolean isEquivalentTo(StepExecution other) {
-    return false;
+    return !(other instanceof Step) || other instanceof DelegateStep ? other.isEquivalentTo(this) : false;
   }
 
   public String getId() {
@@ -473,44 +541,40 @@ public abstract class Step<T extends Step> implements Typed, StepExecution {
     return (T) this;
   }
 
-  public boolean isUseSystemInput() {
-    return useSystemInput;
+  /**
+   * A little helper method to quickly find out whether this step will directly use user inputs or not.
+   * @return Whether this step depends on user outputs or not.
+   */
+  public boolean usesUserInput() {
+    return inputSets.stream().anyMatch(inputSet -> inputSet.stepId == null);
   }
 
-  public void setUseSystemInput(boolean useSystemInput) {
-    this.useSystemInput = useSystemInput;
+  public List<OutputSet> getOutputSets() {
+    return new ArrayList<>(outputSets);
   }
 
-  public T withUseSystemInput(boolean useSystemInput) {
-    setUseSystemInput(useSystemInput);
+  @JsonIgnore
+  protected void setOutputSets(List<OutputSet> outputSets) {
+    outputSets.forEach(outputSet -> outputSet.setStepId(getId()));
+    this.outputSets = outputSets;
+  }
+
+  public List<InputSet> getInputSets() {
+    return inputSets;
+  }
+
+  public void setInputSets(List<InputSet> inputSets) {
+    this.inputSets = inputSets;
+  }
+
+  public T withInputSets(List<InputSet> inputSets) {
+    setInputSets(inputSets);
     return (T) this;
   }
 
-  public boolean isUseSystemOutput() {
-    return useSystemOutput;
-  }
-
-  public void setUseSystemOutput(boolean useSystemOutput) {
-    this.useSystemOutput = useSystemOutput;
-  }
-
-  public T withUseSystemOutput(boolean useSystemOutput) {
-    setUseSystemOutput(useSystemOutput);
-    return (T) this;
-  }
-
-  public Set<String> getInputStepIds() {
-    return inputStepIds;
-  }
-
-  public void setInputStepIds(Set<String> inputStepIds) {
-    this.inputStepIds = inputStepIds.stream()
-            .map(stepId -> stepId.contains(".") ? stepId : jobId + "." + stepId)
-            .collect(Collectors.toSet());
-  }
-
-  public T withInputStepIds(Set<String> inputStepIds) {
-    setInputStepIds(inputStepIds);
+  public T withOutputSetVisibility(String outputSetName, Visibility visibility) {
+    OutputSet outputSet = getOutputSet(outputSetName);
+    outputSet.visibility = visibility;
     return (T) this;
   }
 
@@ -527,4 +591,127 @@ public abstract class Step<T extends Step> implements Typed, StepExecution {
     return (T) this;
   }
 
+  @JsonIgnore
+  protected boolean isUserInputsExpected() {
+    return getInputSets().stream().anyMatch(inputSet -> USER_INPUTS.get().equals(inputSet));
+  }
+
+  @JsonIgnore
+  protected boolean isUserInputsPresent(Class<? extends Input> inputType) {
+    return currentInputsCount(inputType) > 0;
+  }
+
+  /**
+   * Use this constructor to reference the outputs of a step belonging to a different job than the one the consuming step belongs to.
+   * @param jobId The other job's id
+   * @param stepId The step ID of the step producing the outputs
+   * @param name The name for the set of outputs to be produced
+   */
+  public record InputSet(String jobId, String stepId, String name, boolean modelBased) {
+    public static final Supplier<InputSet> USER_INPUTS = () -> new InputSet();
+
+    /**
+     * Use this constructor to reference the outputs of a step belonging to the same job as the consuming step.
+     * @param stepId
+     * @param name
+     */
+    public InputSet(String stepId, String name, boolean modelBased) {
+      this(null, stepId, name, modelBased);
+    }
+
+    public InputSet(OutputSet outputSetOfOtherStep) {
+      this(outputSetOfOtherStep.getStepId(), outputSetOfOtherStep.name, outputSetOfOtherStep.modelBased);
+    }
+
+    /**
+     * Use this constructor to depict the global / user inputs of the same job the consuming step belongs to.
+     */
+    public InputSet() {
+      //TODO: Currently only non-modelbased user inputs are supported
+      this(null, null, null, false);
+    }
+
+    public String toS3Path(String consumerJobId) {
+      String jobId = this.jobId != null ? this.jobId : consumerJobId;
+      if (stepId == null)
+        //This input-set depicts the user inputs
+        return Input.inputS3Prefix(jobId);
+      return Output.stepOutputS3Prefix(jobId, stepId, name);
+    }
+  }
+
+  protected String toS3Path(OutputSet outputSet) {
+    return Output.stepOutputS3Prefix(outputSet.jobId != null ? outputSet.jobId : getJobId(),
+        outputSet.stepId != null ? outputSet.stepId : getId(), outputSet.name);
+  }
+
+  @JsonInclude(Include.NON_DEFAULT)
+  public static class OutputSet {
+    private String jobId;
+    private String stepId;
+    public String name;
+    public Visibility visibility;
+    public String fileSuffix;
+    public boolean modelBased;
+
+    private OutputSet() {} //NOTE: Only needed for deserialization purposes
+
+    protected OutputSet(String name, Visibility visibility, String fileSuffix) {
+      this.name = name;
+      this.visibility = visibility;
+      this.fileSuffix = fileSuffix;
+    }
+
+    public OutputSet(String name, Visibility visibility, boolean modelBased) {
+      this(name, visibility, ".json");
+      this.modelBased = modelBased;
+    }
+
+    public OutputSet(OutputSet other, String jobId, String stepId, Visibility visibility) {
+      this(other.name, visibility, other.fileSuffix);
+      this.modelBased = other.modelBased;
+      this.jobId = jobId;
+      this.stepId = stepId;
+    }
+
+    public String getJobId() {
+      return jobId;
+    }
+
+    public void setJobId(String jobId) {
+      this.jobId = jobId;
+    }
+
+    public OutputSet withJobId(String jobId) {
+      setJobId(jobId);
+      return this;
+    }
+
+    public String getStepId() {
+      return stepId;
+    }
+
+    public void setStepId(String stepId) {
+      this.stepId = stepId;
+    }
+
+    public OutputSet withStepId(String stepId) {
+      setStepId(stepId);
+      return this;
+    }
+
+    @Override
+    public final boolean equals(Object o) {
+      if (!(o instanceof Step.OutputSet that))
+        return false;
+
+      return Objects.equals(jobId, that.jobId) && Objects.equals(stepId, that.stepId) && name.equals(that.name)
+          && visibility == that.visibility && fileSuffix.equals(that.fileSuffix);
+    }
+  }
+
+  public enum Visibility {
+    SYSTEM,
+    USER
+  }
 }
